# SudokuSolver

./: CMakeLists.txt  README.md  commit.sh
include/: SudokuField.h
src/: CMakeLists.txt  SudokuField.cpp  main.cpp
testing/: CMakeLists.txt  tests.cpp
